Modificación de las listas de dominio, disminuye el impacto en la base de datos y en el tamaño de la aplicación. Se crea la entidad, bean de manejo y página para la colección para el usuario final Se termina la puesta del tipo de dato Binary Se añaden las librerías de Bootstrap.

--- a/src/main/webapp/resources/css/pstyle.css
+++ b/src/main/webapp/resources/css/pstyle.css
@@ -42,3 +42,11 @@
     font-weight: 400;
     src: local('Raleway'), url(/Bichos/css/font/0dTEPzkLWceF7z0koJaX1A.woff2) format('woff2');
 }
+
+.ui-tree.ui-tree-horizontal .ui-treenode {
+    padding: 5px 10px !important;
+}
+
+.ui-tree.ui-tree-horizontal .ui-treenode.ui-treenode-leaf, .ui-tree.ui-tree-horizontal .ui-treenode.ui-treenode-collapsed {
+    padding-right: 0px !important;
+}
