--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -90,3 +90,37 @@ hr {
 select[multiple], select[size] {
     min-height: 34px !important;
 }
+
+.topcorner {
+    height: 85px;
+    width: 150px;
+    z-index: 999;
+    position: fixed;
+    top: 0;
+    margin-top: 0.5em;
+    margin-left: 0.5em;
+    padding-top: 0.5em;
+    text-align: center;
+    border-radius: 6px;
+    background-color: #f5f5f5;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
+}
+
+.topcorner>span {
+    font-size: 3em;
+    color: #1d941d;
+}
+
+.oculto {
+    display: none;
+}
+
+.glyphicon-refresh-animate {
+    -animation: spin .7s infinite linear;
+    -webkit-animation: spin2 .7s infinite linear;
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
+}
