--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -136,3 +136,111 @@ div.logo-dashboard {
 .navbar-nav > li > a > i {
     font-size: 1.8em;
 }
+
+.watermark {
+    width: auto;
+    height: 75%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    z-index: -20;
+    opacity: 0.2;
+}
+
+
+.main-panel > .footer {
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 10%;
+    position: absolute;
+}
+
+.main-panel > .content {
+    overflow-y: scroll;
+    height: 79%;
+    width: 100%;
+    min-height: 79%;
+    background-color: rgba(143, 225, 55, 0.21);
+}
+
+.main-panel .navbar {
+    height: 10%;
+}
+
+.navbar {
+    min-height: 70px;
+}
+
+::-webkit-scrollbar {
+    width: 18px;
+    height: 18px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 9px;
+    border: solid 6px #fff;
+    background-color: #91e239;
+}
+
+.new-specimen {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 90px;
+    z-index: 999;
+    background-color: rgb(115, 172, 23);
+    border-radius: 45px;
+    margin: 50px;
+    padding: 5px;
+    -webkit-box-shadow: 1px 1px 10px 0px rgba(14,87,8,1);
+    -moz-box-shadow: 1px 1px 10px 0px rgba(14,87,8,1);
+    box-shadow: 1px 1px 10px 0px rgba(14,87,8,1);
+}
+
+.tooltip {
+    font-family: 'Raleway', sans-serif;
+    font-size: 1em;
+}
+
+.tooltip.left .tooltip-arrow {
+    border-left-color: rgb(115, 172, 23);
+}
+
+.tooltip-inner {
+    background-color: rgb(115, 172, 23);
+}
+
+.sidebar .sidebar-wrapper {
+    width: 100%;
+}
+
+.sidebar .nav i, .sidebar .nav p {
+    line-height: 20px;
+}
+
+.sidebar .nav .seccion {
+    color: red;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+    line-height: 20px;
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+}
+
+.sidebar .nav li > a {
+    margin: 0 15px;
+}
+
+.sidebar .logo .simple-text, body > .navbar-collapse .logo .simple-text {
+    font-size: 15px;
+    line-height: 20px;
+}
