--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -154,7 +154,6 @@ div.logo-dashboard {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 10%;
     position: absolute;
 }
 
@@ -162,8 +161,8 @@ div.logo-dashboard {
     overflow-y: scroll;
     height: 79%;
     width: 100%;
-    min-height: 79%;
-    background-color: rgba(143, 225, 55, 0.21);
+    padding: 30px 0px 0px 15px;
+    background-color: rgba(143, 225, 55, 0.1);
 }
 
 .main-panel .navbar {
@@ -179,14 +178,10 @@ div.logo-dashboard {
     height: 18px;
 }
 
-::-webkit-scrollbar-track {
-    background-color: #fff;
-}
-
 ::-webkit-scrollbar-thumb {
-    border-radius: 9px;
-    border: solid 6px #fff;
-    background-color: #91e239;
+    border-radius: 13px;
+    border: solid 5px rgb(237, 245, 229);
+    background-color: #73ac17;
 }
 
 .new-specimen {
@@ -237,7 +232,7 @@ div.logo-dashboard {
 
 .sidebar .nav li > a {
     margin: 0 15px;
-    padding: 3px 15px;
+    padding: 0px 15px;
 }
 
 .sidebar .logo .simple-text, body > .navbar-collapse .logo .simple-text {
@@ -253,5 +248,5 @@ div.logo-dashboard {
 
 .sidebar .nav .seccion > a {
     margin: 0 0px;
-    padding: 3px 0px;
+    padding: 0px 0px;
 }
